--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FontIcons</title>
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Style -->
@@ -24,7 +26,7 @@
         <div class="container">
             <!-- Aggiungi form -->
             <label for="icons">Filtra per tipo</label>
-            <select name="icons">
+            <select name="icons" id="icons">
                 <option value="All">All</option>
                 <option value="Animal">Animal</option>
                 <option value="Vegetable">Vegetable</option>
@@ -33,7 +35,8 @@
             <!-- /Aggiungi form -->
         </div>
         <div class="container">
-            <div id="icon-box"></div>
+            <!-- Aggiungi cards -->
+            <div id="icons-box" class="col"></div>
         </div>
     </main>
     <!-- /MAIN -->
